# raycaster

./: CMakeLists.txt
maps/: test.csv  test16.csv
src/: config.h  input.c  input.h  main.c  player.c  player.h  util.c  util.h
src/3d/: raycast.c  raycast.h  render.c  render.h
src/map/: csvmap.c  csvmap.h  loader.c  loader.h  map.c  map.h
